# presquile

./: CMakeLists.txt
data/: CMakeLists.txt  qmldir
data/plugin/: CMakeLists.txt  pqbaseitem.cpp  pqplugin.cpp  pqplugin.h
data/qml/: CMakeLists.txt
data/qml/animations/: ColorAnimation.qml  NumberAnimation.qml  ParallelAnimation.qml  PauseAnimation.qml  PropertyAnimation.qml  RotationAnimation.qml  SpringAnimation.qml
data/qml/components/: PQAnimatedImage.qml  PQImage.qml  PQRectangle.qml  PQResizable.qml  PQText.qml  Text.qml
data/qml/internals/: Slide.qml
data/qml/skeleton/: PQPresentation.qml  PQSlide.qml
src/: CMakeLists.txt  animationselectdialog.cpp  animationselectdialog.h  coreutils.cpp  coreutils.h  main.cpp  mainwindow.cpp  mainwindow.h  pqbaseitem.cpp  pqbaseitem.h  pqcomponentsanimationspanel.cpp  pqcomponentsanimationspanel.h  pqcomponentspanel.cpp  pqcomponentspanel.h  pqcomponentstreewidget.cpp  pqcomponentstreewidget.h  pqslide.cpp  pqslide.h  pqslidedesigner.cpp  pqslidedesigner.h  pqslidepropertiespanel.h  pqslidesmodel.cpp  pqslidesmodel.h  pqslidesmodeldelegate.cpp  pqslidesmodeldelegate.h  pqslidesviewpanel.cpp  propertieseditor.cpp
src/core/: CMakeLists.txt  coreutils.cpp  coreutils.h  pqbaseitem.cpp  pqbaseitem.h  pqqmlloader.cpp  pqqmlloader.h  pqserializer.cpp  pqserializer.h  pqslide.cpp  pqslide.h  pqslidesmodel.cpp  pqslidesmodel.h  pqstandarddirs.cpp  pqstandarddirs.h
src/declarative/: CMakeLists.txt  pqitemframe.cpp  pqitemframe.h  pqplugin.cpp  pqqmlmanager.h  qmldir
src/declarative/qml/animations/: ColorAnimation.qml  NumberAnimation.qml  RotationAnimation.qml
src/declarative/qml/components/: PQResizable.qml  PQText.qml
src/editors/: animationsequenceeditor.cpp  animationsequenceeditor.h  easingcurveeditor.cpp  easingcurveeditor.h  pqtexteditor.cpp  pqtexteditor.h  propertieseditor.cpp  propertieseditor.h  propertieseditoritem.cpp  propertieseditoritem.h  propertyeditor.cpp  propertyeditor.h  transformationseditor.cpp  transformationseditor.h
src/panels/: pqcomponentpropertiespanel.cpp  pqcomponentpropertiespanel.h  pqcomponentsanimationspanel.cpp  pqcomponentsanimationspanel.h  pqcomponentspanel.cpp  pqcomponentspanel.h  pqslidepropertiespanel.cpp  pqslidesviewpanel.cpp  pqslidesviewpanel.h
src/qml/: pqbaseitem.cpp  pqbaseitem.h  pqmlrichtexteditor.cpp  pqmlrichtexteditor.h  pqplugin.cpp  pqplugin.h  pqqmlmanager.cpp
tests/: CMakeLists.txt  texteditortest.cpp
